# flux-lang

./: .gitignore  CMakeLists.txt  README.md  main.flx
.github/workflows/: build.yml
Example/: add.flx  main.flx
Examples/: add.flx  main  main.flx  stdlib_test.flx  t.txt
compiler/: .gitignore
compiler/include/flux/ast/: ast_node.h  ast_visitor.h  type.h
compiler/include/flux/common/: diagnostic.h
compiler/include/flux/lexer/: lexer.h
compiler/src/: main.cpp
compiler/src/lexer/: lexer.cpp
docs/: Абстрактное синтаксическое дерево (AST).md  Кодогенератор.md  Лексер.md  Обзор языка.md  Парсер.md  План работы компилятора.md  Препроцессор.md  Примеры программ.md  Семантический анализатор.md  Синтаксис языка Flux.md  Система диагностики.md  Стандартная библиотека.md  Требования.md
editors/vscode/: extension.js  language-configuration.json  package.json
editors/vscode/syntaxes/: flux.tmLanguage.json
include/flux/: compiler.h
include/flux/ast/: ast_node.h  ast_visitor.h  decl.h  expr.h  stmt.h  type.h
include/flux/codegen/: codegen.h
include/flux/common/: source_location.h
include/flux/complete/: complete.h
include/flux/lexer/: lexer.h  token_kind.h
include/flux/lsp/: server.h
include/flux/parser/: parser.h
include/flux/preprocessor/: preprocessor.h
include/flux/sema/: sema.h
include/flux/stdlib/: stdlib_modules.h
src/: compiler.cpp  main.cpp
src/ast/: ast_visitor.cpp
src/codegen/: codegen.cpp
src/complete/: complete.cpp
src/lexer/: lexer.cpp  token.cpp
src/lsp/: server.cpp
src/parser/: parser.cpp
src/preprocessor/: preprocessor.cpp
src/sema/: sema.cpp
